--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - HUGO_REFRESH_TIME=3600
       - HUGO_THEME=toha
-      - HUGO_BASEURL=erwankessler.com
+      - HUGO_BASEURL=new.erwankessler.com
       - HUGO_WATCH=true
     ports:
       - 127.0.0.1:5056:443
